--- a/style.css
+++ b/style.css
@@ -1,17 +1,12 @@
 body{
 	background-color: white;
-
 }
-
 
 #container{
 	width: 600px;
 	height: 600px;
 	margin: 0 auto;
 	border: 2px solid black;
-/*	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;*/
 	position: relative;
 }
 
@@ -22,9 +17,26 @@ body{
 #id1, #id2, #id3, #id4, #id5, #id6, #id7,#id8,#id9{
 	width: 200px;
 	height: 200px;
+	text-align: center;
 	border: 2px solid blue;
 	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	float: left;
+}
+
+#gamePromote{
+	width: 300px;
+	display: none;
+	position: absolute;
+	z-index: 2;
+	margin: 0 auto;
+	background: lightyellow;
+	top: 300px;
+	left: 300px;
+}
+
+button{
+	width: 50px;
+	height: 30px;
 }
