--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
 }
 
 #gamePromote{
-	width: 300px;
+	width: 600px;
 	display: none;
 	position: absolute;
 	z-index: 2;
@@ -35,6 +35,11 @@ body{
 	top: 300px;
 	left: 300px;
 }
+
+#game-results, #game-info,#you-win,#you-lost{
+	display: none;
+}
+
 
 button{
 	width: 50px;
