--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body{
 	display: inline;
 }
 
+#header{
+	margin: 0 auto;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
 #id1, #id2, #id3, #id4, #id5, #id6, #id7,#id8,#id9{
 	width: 200px;
 	height: 200px;
@@ -36,7 +42,7 @@ body{
 	left: 300px;
 }
 
-#game-results, #game-info,#you-win,#you-lost{
+#game-results,#you-win,#you-lost{
 	display: none;
 }
 
